added working status div in buy page

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 *.TMP
+css/font-awesome4.6.1.css
+fonts/fontawesome-webfont.eot
+fonts/fontawesome-webfont.svg
+fonts/fontawesome-webfont.ttf
+fonts/fontawesome-webfont.woff
+fonts/fontawesome-webfont.woff2
